@@ -11,6 +11,8 @@ Versão: 0.12
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
+23/11/2021 - Robson Vaamonde - Correção da falha de pacote no script: 13-netdata.sh (pacote python3-psycopg2), 
+
 20/11/2021 - Robson Vaamonde - Atualização do script: 01-openssh.sh, falha do redirecionamento do LOG da instalação
 das ferramentas de rede ($LOG) na linha 128, atualização do arquivo de configuração do MySQL Server mysqld.cnf para
 suportar somente IPV4 (bind-address	= 0.0.0.0), atualização dos arquivos de configuração do Bind9 named.conf.options
